Realm database used for config and sounds. Recycler view bound to realm database

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#FCAD26</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="baptiste">#FCAD26</color>
+    <color name="sound">#FCAD26</color>
     <color name="mere">#9E54BD</color>
     <color name="frere">#4593E3</color>
 </resources>
