New sound item with global and my clicks, plus favorite feature

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="sound">#FCAD26</color>
     <color name="mere">#9E54BD</color>
     <color name="frere">#4593E3</color>
+    <color name="sound_text_color">#333333</color>
 </resources>
