--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     tools:context="com.monirapps.boiteabaptiste.MainActivity">
 
-    <co.moonmonkeylabs.realmrecyclerview.RealmRecyclerView
+    <com.monirapps.boiteabaptiste.BoiteRecyclerView
         android:id="@+id/sounds"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
