other boxes UI and links

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="mere">#9E54BD</color>
     <color name="frere">#4593E3</color>
     <color name="sound_text_color">#333333</color>
+    <color name="footer_background">#AAAAAA</color>
 </resources>
