--- a/app/src/main/res/layout/box_item.xml
+++ b/app/src/main/res/layout/box_item.xml
@@ -14,11 +14,15 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="8dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="4dp"
         android:foreground="?android:attr/selectableItemBackground"
         card_view:cardCornerRadius="10dp"
         card_view:cardElevation="4dp"
         card_view:contentPadding="8dp"
+        android:clipToPadding="false"
         >
 
         <LinearLayout
