--- a/app/src/main/res/layout/footer_item.xml
+++ b/app/src/main/res/layout/footer_item.xml
@@ -14,11 +14,15 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="8dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="4dp"
         android:foreground="?android:attr/selectableItemBackground"
         card_view:cardCornerRadius="10dp"
         card_view:cardElevation="4dp"
         card_view:contentPadding="8dp"
+
         >
 
         <LinearLayout
@@ -39,7 +43,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/footer_title"
                     android:textColor="@android:color/white"
-                    android:textSize="18dp"
+                    android:textSize="16dp"
                     android:textStyle="bold"
                     />
 
@@ -48,7 +52,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/footer_subtitle"
                     android:textColor="@android:color/white"
-                    android:textSize="14dp"
+                    android:textSize="13dp"
                     />
 
             </LinearLayout>
