--- a/app/src/main/res/layout/native_ad_item.xml
+++ b/app/src/main/res/layout/native_ad_item.xml
@@ -1,85 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/nativeAdViewGroup"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="4dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginTop="4dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    card_view:cardCornerRadius="8dp"
+    card_view:cardElevation="4dp"
+    card_view:contentPadding="5dp"
+    android:clipToPadding="false"
+    >
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/nativeAdViewGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="7dp">
-
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:scaleType="fitCenter" />
-
-        <Button
-            android:id="@+id/callToAction"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:ellipsize="end"
-            android:lines="1"
-            android:maxWidth="150dp"
-            android:textSize="16sp" />
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_alignBottom="@id/icon"
-            android:layout_alignTop="@id/icon"
-            android:layout_toLeftOf="@id/callToAction"
-            android:layout_toRightOf="@id/icon"
-            android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:paddingLeft="7dp"
-            android:paddingRight="7dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="7dp">
 
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/icon"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:scaleType="fitCenter"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:lines="1"
-                android:textSize="20sp" />
+                android:layout_alignBottom="@id/icon"
+                android:layout_alignTop="@id/icon"
+                android:layout_toRightOf="@id/icon"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="7dp"
+                android:paddingRight="7dp">
 
-            <TextView
-                android:id="@+id/rating"
-                android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"/>
+
+                <TextView
+                    android:id="@+id/cta"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"/>
+
+                <TextView
+                    android:id="@+id/rating"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@id/title"
+                    android:layout_below="@id/title"
+                    android:textColor="@color/sound_text_color"
+                    android:textSize="12sp"/>
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/cover"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@id/title"
-                android:layout_below="@id/title"
-                android:textColor="@color/sound_text_color"
-                android:textSize="12sp" />
-
+                android:adjustViewBounds="true"
+                android:maxHeight="80dp"
+                android:scaleType="centerCrop"/>
         </LinearLayout>
-    </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/cover"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:maxHeight="80dp"
-        android:scaleType="centerCrop" />
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:maxLines="4"
+            android:textSize="13dp"
+            tools:text="ttot"
+            />
 
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginRight="7dp"
-        android:layout_marginTop="9dp"
-        android:textSize="16sp"
-        android:maxLines="4" />
+    </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/sound_text_color" />
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
