--- a/app/src/main/res/layout/sound_item.xml
+++ b/app/src/main/res/layout/sound_item.xml
@@ -2,12 +2,14 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:lottie="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clipChildren="false"
     android:clipToPadding="false"
     android:orientation="vertical"
+    android:background="#00FFFFFF"
     >
 
     <android.support.v7.widget.CardView
@@ -26,6 +28,7 @@
         card_view:contentPaddingLeft="18dp"
         card_view:contentPaddingRight="18dp"
         android:clipToPadding="false"
+        android:clipChildren="false"
         >
 
         <RelativeLayout
@@ -126,14 +129,22 @@
 
             </LinearLayout>
 
-            <ImageView
+            <!--<ImageView-->
+                <!--android:id="@+id/favorite"-->
+                <!--android:layout_width="30dp"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:src="@drawable/star"-->
+                <!--/>-->
+
+            <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/favorite"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
-                android:src="@drawable/star"
-                />
+                lottie:lottie_fileName="star.json" />
 
         </RelativeLayout>
 
