Changed package name to remove baptiste. Added new native ads components

--- a/app/src/main/res/layout/sounds_fragment.xml
+++ b/app/src/main/res/layout/sounds_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <com.monirapps.boiteabaptiste.BoiteRecyclerView
+    <com.monirapps.boitea.BoiteRecyclerView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
