--- a/app/src/main/res/layout/favorites_fragment.xml
+++ b/app/src/main/res/layout/favorites_fragment.xml
@@ -5,10 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.monirapps.boiteabaptiste.MainActivity">
+    android:layout_height="match_parent">
 
-    <com.monirapps.boiteabaptiste.BoiteRecyclerView
+    <com.monirapps.boitea.BoiteRecyclerView
         android:id="@+id/sounds"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
