--- a/app/src/main/res/layout/native_ad_item.xml
+++ b/app/src/main/res/layout/native_ad_item.xml
@@ -42,7 +42,7 @@
                 android:layout_alignBottom="@id/icon"
                 android:layout_alignTop="@id/icon"
                 android:layout_toRightOf="@id/icon"
-                android:gravity="center_vertical"
+                android:gravity="center"
                 android:orientation="vertical"
                 android:paddingLeft="7dp"
                 android:paddingRight="7dp">
@@ -53,10 +53,16 @@
                     android:layout_height="wrap_content"
                     android:textSize="16dp"/>
 
-                <TextView
+                <Button
                     android:id="@+id/cta"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"/>
+                    android:layout_width="wrap_content"
+                    android:padding="0dp"
+                    android:layout_height="25dp"
+                    android:background="@drawable/ad_cta"
+                    android:textColor="@android:color/white"
+                    android:textSize="16dp"
+                    android:textAllCaps="false"
+                    />
 
                 <TextView
                     android:id="@+id/rating"
