--- a/app/src/main/res/layout/native_ad_item.xml
+++ b/app/src/main/res/layout/native_ad_item.xml
@@ -51,6 +51,8 @@
                     android:id="@+id/title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:textAlignment="center"
                     android:textSize="16dp"/>
 
                 <Button
