--- a/app/src/durif/res/values/strings-flavor.xml
+++ b/app/src/durif/res/values/strings-flavor.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Boîte à Sylvain Durif</string>
+    <string name="app_name">LBÀ Sylvain Durif</string>
     <string name="adincube_app_key">f82bb85ca16c4ec69d35</string>
 </resources>
