--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="click_text_size">12dp</dimen>
+    <dimen name="native_ad_margin">4dp</dimen>
+    <dimen name="native_ad_corner_radius">3dp</dimen>
 </resources>
