--- a/app/src/baptiste/res/values/strings-flavor.xml
+++ b/app/src/baptiste/res/values/strings-flavor.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Boîte à Baptiste</string>
+    <string name="app_name">LBÀ Baptiste</string>
     <string name="adincube_app_key">cef066673ce140cbad53</string>
 </resources>
