--- a/app/src/chirac/res/values/strings-flavor.xml
+++ b/app/src/chirac/res/values/strings-flavor.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Boîte à Chirac</string>
+    <string name="app_name">LBÀ Chirac</string>
     <string name="adincube_app_key">2544e846500a40098ba2</string>
 </resources>
