--- a/app/src/main/res/layout/native_ad_item.xml
+++ b/app/src/main/res/layout/native_ad_item.xml
@@ -5,11 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/native_ad_root"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
+    android:layout_height="1000dp"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
-    android:layout_marginTop="4dp"
     android:foreground="?android:attr/selectableItemBackground"
     card_view:cardCornerRadius="8dp"
     card_view:cardElevation="4dp"
@@ -66,14 +64,19 @@
                     android:textAllCaps="false"
                     />
 
-                <TextView
+                <me.zhanghai.android.materialratingbar.MaterialRatingBar
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/rating"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
                     android:layout_alignLeft="@id/title"
                     android:layout_below="@id/title"
-                    android:textColor="@color/sound_text_color"
-                    android:textSize="12sp"/>
+                    android:rating="4"
+                    app:mrb_progressTint="@color/colorPrimary"
+                    app:mrb_secondaryProgressTint="@color/footer_background"
+                    style="?android:attr/ratingBarStyleSmall"
+                    />
 
             </LinearLayout>
 
@@ -82,6 +85,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:adjustViewBounds="true"
                 android:maxHeight="80dp"
                 android:scaleType="centerCrop"/>
