Changed status bar colors and added a share button

--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -6,4 +6,10 @@
         android:icon="@drawable/ic_sort"
         android:title="@string/sort"
         app:showAsAction="always"/>
+    <item
+        android:id="@+id/share"
+        android:icon="@drawable/ic_share"
+        android:title="@string/share"
+        app:showAsAction="ifRoom"
+        />
 </menu>
