--- a/app/src/fillon/res/values/colors-flavor.xml
+++ b/app/src/fillon/res/values/colors-flavor.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#22338b</color>
+    <color name="colorPrimaryDark">#CC22338b</color>
 </resources>
