--- a/app/src/heenok/res/values/colors-flavor.xml
+++ b/app/src/heenok/res/values/colors-flavor.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#232626</color>
+    <color name="colorPrimaryDark">#CC232626</color>
 </resources>
