--- a/app/src/macron/res/values/colors-flavor.xml
+++ b/app/src/macron/res/values/colors-flavor.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FF3680</color>
+    <color name="colorPrimaryDark">#CCFF3680</color>
 </resources>
