--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,9 @@
             android:background="?attr/colorPrimary"
             android:elevation="4dp"
             app:contentInsetStart="8dp"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+            app:theme="@style/ToolbarStyle"
+            app:popupTheme="@style/ToolbarStyle"
+            >
 
             <ImageView
                 android:id="@+id/icon"
