--- a/app/src/melenchon/res/values/colors-flavor.xml
+++ b/app/src/melenchon/res/values/colors-flavor.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#95070a</color>
+    <color name="colorPrimaryDark">#CC95070a</color>
 </resources>
