--- a/app/src/main/res/layout/sounds_fragment.xml
+++ b/app/src/main/res/layout/sounds_fragment.xml
@@ -15,7 +15,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/sounds"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:overScrollMode="never"
             android:scrollbarStyle="outsideOverlay"
             />
