--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,8 @@
         <item name="android:textColorSecondary">#FFFFFF</item>
     </style>
 
+    <style name="checkBoxStyle" parent="AppTheme">
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
+
 </resources>
