--- a/app/src/main/res/layout/sound_item.xml
+++ b/app/src/main/res/layout/sound_item.xml
@@ -39,6 +39,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/favorite"
                 android:orientation="vertical"
                 >
 
@@ -47,7 +48,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="3dp"
-                    android:gravity="center"
+                    android:gravity="left"
                     android:textColor="@color/sound_text_color"
                     android:textSize="20dp"
                     android:textStyle="bold"
